--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -62,15 +62,15 @@
 <section class="d-flex flex-column justify-content-center" #about id="about">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-12 text-center page-title sh" data-aos="zoom-in">
+            <div class="col-md-12 text-center page-title" data-aos="zoom-in" data-aos-offset="0">
                 <h1>O MNĚ</h1>
             </div>
         </div>
         <div class="row justify-content-center items-align-center">
-            <div class="col-md-4" data-aos="fade-right">
+            <div class="col-md-4" data-aos="fade-right" data-aos-offset="0">
                 <img src="../../assets/me.webp" class="rounded profil-img" alt="">
             </div>
-            <div class="col-md-8 aboutText" data-aos="fade-left">
+            <div class="col-md-8 aboutText" data-aos="fade-left" data-aos-offset="0">
                 <h2 class="sh">
                     Web developer.
                 </h2>
@@ -113,50 +113,50 @@
 <section class="d-flex flex-column justify-content-center" #jazyky id="jazyky">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-12 text-center page-title sh" data-aos="zoom-in">
+            <div class="col-md-12 text-center page-title" data-aos="zoom-in" data-aos-offset="0">
                 <h1>Programovací jazyky a nástroje</h1>
             </div>
-            <div class="col-1 col-md-1">
+            <div class="col-2 col-md-1">
                 <a href="https://angular.io/" target="_blank">
                     <img src="../../assets/icons/angular.svg" width="100%" alt="Angular">
                 </a>
             </div>
-            <div class="col-1 col-md-1">
+            <div class="col-2 col-md-1">
                 <a href="https://www.php.net" target="_blank">
                     <img src="../../assets/icons/php.svg" width="100%" alt="PHP">
                 </a>
             </div>
-            <div class="col-1 col-md-1">
+            <div class="col-2 col-md-1">
                 <a href="https://https://getbootstrap.com/" target="_blank">
                     <img src="../../assets/icons/bootstrap.svg" width="100%" alt="Bootstrap">
                 </a>
             </div>
-            <div class="col-1 col-md-1">
+            <div class="col-2 col-md-1">
                 <a href="https://w3schools.com/css/" target="_blank">
                     <img src="../../assets/icons/css3.svg" width="100%" alt="CSS3">
                 </a>
             </div>
-            <div class="col-1 col-md-1">
+            <div class="col-2 col-md-1">
                 <a href="https://www.w3.org/html/" target="_blank">
                     <img src="../../assets/icons/html5.svg" width="100%" alt="HTML5">
                 </a>
             </div>
-            <div class="col-1 col-md-1">
+            <div class="col-2 col-md-1">
                 <a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript" target="_blank">
                     <img src="../../assets/icons/javascript.svg" width="100%" alt="JavaScript">
                 </a>
             </div>
-            <div class="col-1 col-md-1">
+            <div class="col-2 col-md-1">
                 <a href="https://www.photoshop.com/en" target="_blank">
                     <img src="../../assets/icons/photoshop.svg" width="100%" alt="Photoshop">
                 </a>
             </div>
-            <div class="col-1 col-md-1">
+            <div class="col-2 col-md-1">
                 <a href="https://www.typescriptlang.org/" target="_blank">
                     <img src="../../assets/icons/typescript.svg" width="100%" alt="TypeScript">
                 </a>
             </div>
-            <div class="col-1 col-md-1">
+            <div class="col-2 col-md-1">
                 <a href="https://github.com/JakSar77" target="_blank">
                     <svg width="100%" aria-hidden="true" viewBox="0 0 16 16" version="1.1" data-view-component="true" class="octicon octicon-mark-github v-align-middle">
                         <path fill-rule="evenodd" d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.013 8.013 0 0016 8c0-4.42-3.58-8-8-8z"></path>
@@ -169,11 +169,11 @@
 <section class="d-flex flex-column justify-content-center" #projekty id="projekty">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-12 text-center page-title sh" data-aos="zoom-in">
+            <div class="col-md-12 text-center page-title" data-aos="zoom-in" data-aos-offset="0">
                 <h1>Projekty</h1>
             </div>
             <div class="col-md-4">
-                <div class="card mb-3">
+                <div class="card mb-3" data-aos="fade-up">
                     <img src="../../assets/projekty/gamerhost.pro.webp" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">GamerHost s.r.o.</h5>
@@ -276,7 +276,7 @@
 <section class="d-flex flex-column justify-content-center" #reference id="reference">
     <div class="container">
         <div class="row justify-content-center">
-            <div class="col-md-12 text-center page-title sh">
+            <div class="col-md-12 text-center page-title">
                 <h1>Reference</h1>
             </div>
             <div class="col-md-12">
