--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,7 +2,7 @@
 
 html,
 body {
-    background-color: #fff;
+    background-color: #e7ebee;
 }
 body {
     font-size: 1rem;
@@ -137,8 +137,9 @@ body {
   }
 
 section#main {
+    position: relative;
     width: 100%;
-    height: 100vh;
+    height: 75vh;
     background: linear-gradient(rgba(255,255,255,.01) 100%,rgba(255,255,255,.01) 0),url("./assets/background.webp"),#fff;
     background-position: center 80%;
     background-size: cover;
@@ -252,6 +253,7 @@ section#main {
     h1 {
         text-transform: uppercase;
         font-weight: bold;
+        text-shadow: 10px 10px 0px rgb(0 0 0 / 15%);
     }
 }
 
@@ -457,3 +459,14 @@ footer {
     100% { top: 0; }
 }
 
+
+.card {
+    border-radius: 25px;
+    .card-img-top {
+        border-top-left-radius: 25px;
+        border-top-right-radius: 25px;
+    }
+}
+.rounded {
+    border-radius: 25px !important;
+}
