--- a/src/styles.scss
+++ b/src/styles.scss
@@ -139,9 +139,10 @@ body {
 section#main {
     position: relative;
     width: 100%;
-    height: 75vh;
-    background: linear-gradient(rgba(255,255,255,.01) 100%,rgba(255,255,255,.01) 0),url("./assets/background.webp"),#fff;
-    background-position: center 80%;
+    height: 70vh;
+    background-color: #3b5998;
+    background-image: url("./assets/background.webp");
+    background-position: center top;
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -258,10 +259,9 @@ section#main {
 }
 
 section#about {
-    margin-top: 30px;
     margin-bottom: 2rem;
     width: 100%;
-    min-height: 75vh;
+    min-height: 60vh;
     .profil-img {
         width: 100%;
         box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
@@ -290,9 +290,9 @@ section#about {
 }
 section#reference {
     width: 100%;
-    min-height: 75vh;
+    min-height: 70vh;
     mdb-carousel-item {
-        min-height: 50vh;
+        min-height: 45vh;
         img {
             margin-bottom: 1.2rem;
         }
@@ -461,6 +461,7 @@ footer {
 
 
 .card {
+    margin-bottom: 1.5rem;
     border-radius: 25px;
     .card-img-top {
         border-top-left-radius: 25px;
@@ -470,3 +471,31 @@ footer {
 .rounded {
     border-radius: 25px !important;
 }
+img {
+    max-width: 100%;
+    height: auto;
+}
+
+
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #c3473c rgba(0,0,0,0);
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 12px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: rgba(0,0,0,0);
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #c3473c;
+    border-radius: 10px;
+    border: 3px solid transparent;
+  }
